# APSD

./: Time.h
MPI/BinaryTreeMethod/: mainFinal.c
MPI/BinaryTreeMethod/Seriale/: mainseriale.cpp
MPI/Find an element/: main.c  mainBlocking.c  mainSeriale.c
MPI/Find an element/Seriale/: mainSeriale.c
MPI/HelloWorld/: HelloWorld.c
MPI/Matrix Multiplication/Seriale/: main.cpp
MPI/Matrix Multiplication/TipoA/: main.c  mainScatter.c
MPI/Matrix Multiplication/TipoB/: main.c
MPI/NumericalIntegration/: main.c
MPI/NumericalIntegration/Seriale/: main.cpp
MPI/PI/: main.c  script.sh
MPI/Progetto Sciddica/: CMakeLists.txt  Reader.h  mainSciddica.cpp
MPI/Progetto Sciddica/data/: dem.asc  source.asc
MPI/Progetto Sciddica/grafica/: Camera.h  PointLight.h  Surface.h  Temperature.h  main.cpp
MPI/Progetto Sciddica/grafica/shaders/: surface.frag
SommaElementiVettore/: main.cpp
gameOfLife/: drawMatrix.py  gameOfLife.h  main.cpp
piGreco/: Time.h  main.cpp
sommaTraMatrici/: out_10000_70000_1_4  sommaMatrici.cpp
trovaElementoVettore/: main.cpp
